--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser": "6.1.2",
     "@angular/platform-browser-dynamic": "6.1.2",
     "@angular/router": "6.1.2",
+    "@auth0/angular-jwt": "^1.2.0",
     "bootstrap": "^4.1.3",
     "chart.js": "2.7.1",
     "core-js": "2.5.7",
@@ -29,6 +30,7 @@
     "fullcalendar": "3.5.1",
     "intl": "1.2.5",
     "jquery": "3.2.1",
+    "jwt-decode": "^2.2.0",
     "moment": "2.18.1",
     "primeicons": "1.0.0-beta.9",
     "primeng": "6.0.0",
