--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "avalon",
+  "name": "atg",
   "version": "6.0.0",
-  "license": "COMMERCIAL",
+  "license": "",
   "angular-cli": {},
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --proxy-config proxy.conf.json",
+    "start": "ng serve --host 0.0.0.0 --proxy-config proxy.conf.json ",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
