--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "angular-cli": {},
   "scripts": {
     "ng": "ng",
-    "start": "ng serve --host 0.0.0.0 --proxy-config proxy.conf.json ",
+    "start": "ng serve  --proxy-config proxy.conf.json",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -24,25 +24,26 @@
     "@angular/router": "6.1.2",
     "@auth0/angular-jwt": "^1.2.0",
     "bootstrap": "^4.1.3",
-    "chart.js": "2.7.1",
+    "chart.js": "^2.7.2",
     "core-js": "2.5.7",
     "font-awesome": "4.7.0",
     "fullcalendar": "3.5.1",
     "intl": "1.2.5",
     "jquery": "3.2.1",
     "jwt-decode": "^2.2.0",
-    "moment": "2.18.1",
+    "moment": "^2.22.2",
     "primeicons": "1.0.0-beta.9",
     "primeng": "6.0.0",
     "quill": "1.1.8",
     "rxjs": "6.2.2",
-    "rxjs-compat": "^6.2.2",
+    "rxjs-compat": "^6.3.2",
     "web-animations-js": "2.3.1",
+    "webpack": "^4.19.1",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.6.8",
-    "@angular/cli": "^6.1.3",
+    "@angular/cli": "^6.2.3",
     "@angular/compiler-cli": "6.1.2",
     "@angular/language-service": "6.1.2",
     "@angularclass/hmr": "^2.1.3",
@@ -52,12 +53,12 @@
     "codelyzer": "4.2.1",
     "jasmine-core": "2.99.1",
     "jasmine-spec-reporter": "4.2.1",
-    "karma": "1.7.1",
+    "karma": "^3.0.0",
     "karma-chrome-launcher": "2.2.0",
     "karma-coverage-istanbul-reporter": "2.0.1",
     "karma-jasmine": "1.1.2",
     "karma-jasmine-html-reporter": "0.2.2",
-    "protractor": "5.3.2",
+    "protractor": "^5.4.1",
     "ts-node": "5.0.1",
     "tslint": "5.9.1",
     "typescript": "2.9.2"
