--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@angular/router": "6.1.2",
     "@auth0/angular-jwt": "^1.2.0",
     "bootstrap": "^4.1.3",
+    "camelcase": "^5.0.0",
+    "camelize": "^1.0.0",
     "chart.js": "^2.7.2",
     "core-js": "2.5.7",
     "font-awesome": "4.7.0",
