--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "rxjs-compat": "^6.3.2",
     "web-animations-js": "2.3.1",
     "webpack": "^4.19.1",
-    "zone.js": "0.8.26"
+    "zone.js": "0.8.26",
+    "js-xlsx": "latest",
+    "ts-xlsx": "latest"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.6.8",
