--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "fullcalendar": "3.5.1",
     "intl": "1.2.5",
     "jquery": "3.2.1",
+    "js-xlsx": "latest",
     "jwt-decode": "^2.2.0",
     "moment": "^2.22.2",
     "primeicons": "1.0.0-beta.9",
@@ -39,11 +40,10 @@
     "quill": "1.1.8",
     "rxjs": "6.2.2",
     "rxjs-compat": "^6.3.2",
+    "ts-xlsx": "0.0.11",
     "web-animations-js": "2.3.1",
     "webpack": "^4.19.1",
-    "zone.js": "0.8.26",
-    "js-xlsx": "latest",
-    "ts-xlsx": "latest"
+    "zone.js": "0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "0.6.8",
