--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "6.1.2",
     "@angular/router": "6.1.2",
     "@auth0/angular-jwt": "^1.2.0",
+    "@types/xlsx": "0.0.36",
     "bootstrap": "^4.1.3",
     "camelcase": "^5.0.0",
     "camelize": "^1.0.0",
