--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "rxjs": "6.2.2",
     "rxjs-compat": "^6.3.2",
     "ts-xlsx": "0.0.11",
+    "xlsx": "0.12.13",
     "web-animations-js": "2.3.1",
     "webpack": "^4.19.1",
     "zone.js": "0.8.26"
