--- a/package.json
+++ b/package.json
@@ -42,9 +42,9 @@
     "rxjs": "6.2.2",
     "rxjs-compat": "^6.3.2",
     "ts-xlsx": "0.0.11",
-    "xlsx": "0.12.13",
     "web-animations-js": "2.3.1",
     "webpack": "^4.19.1",
+    "xlsx": "^0.12.13",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
