--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "name": "atg",
-  "version": "6.0.0",
+  "version": "0.0.1",
   "license": "",
   "angular-cli": {},
   "scripts": {
     "ng": "ng",
+    "prestart": "node ./node_modules/ng-appversion/index.js",
     "start": "ng serve  --proxy-config proxy.conf.json",
+    "prebuild": "node ./node_modules/ng-appversion/index.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
@@ -35,11 +37,13 @@
     "jquery": "3.2.1",
     "jwt-decode": "^2.2.0",
     "moment": "^2.22.2",
+    "ng-appversion": "^1.1.0",
     "primeicons": "1.0.0-beta.9",
     "primeng": "^6.0.0",
     "quill": "1.1.8",
     "rxjs": "6.2.2",
     "rxjs-compat": "^6.3.2",
+    "systemjs": "^2.0.2",
     "ts-xlsx": "0.0.11",
     "web-animations-js": "2.3.1",
     "webpack": "^4.19.1",
