--- a/package.json
+++ b/package.json
@@ -38,12 +38,13 @@
     "jwt-decode": "^2.2.0",
     "moment": "^2.22.2",
     "ng-appversion": "^1.1.0",
+    "npm": "^6.4.1",
     "primeicons": "1.0.0-beta.9",
     "primeng": "^6.0.0",
     "quill": "1.1.8",
     "rxjs": "6.2.2",
     "rxjs-compat": "^6.3.2",
-    "systemjs": "^2.0.2",
+    "systemjs": "^0.19.47",
     "ts-xlsx": "0.0.11",
     "web-animations-js": "2.3.1",
     "webpack": "^4.19.1",
