--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/xlsx": "0.0.36",
     "bootstrap": "^4.1.3",
     "camelcase": "^5.0.0",
+    "camelcase-object-deep": "^1.0.9",
     "camelize": "^1.0.0",
     "chart.js": "^2.7.2",
     "core-js": "2.5.7",
