--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "camelcase": "^5.0.0",
     "camelcase-object-deep": "^1.0.9",
     "camelize": "^1.0.0",
+    "change-case": "^3.0.2",
     "chart.js": "^2.7.2",
     "core-js": "2.5.7",
     "font-awesome": "4.7.0",
