--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
     "@angular/platform-browser-dynamic": "6.1.2",
     "@angular/router": "6.1.2",
     "@auth0/angular-jwt": "^1.2.0",
-    "@types/xlsx": "0.0.36",
     "bootstrap": "^4.1.3",
     "camelcase": "^5.0.0",
     "camelcase-object-deep": "^1.0.9",
@@ -47,9 +46,9 @@
     "rxjs": "6.2.2",
     "rxjs-compat": "^6.3.2",
     "systemjs": "^0.19.27",
-    "ts-xlsx": "0.0.11",
     "web-animations-js": "2.3.1",
     "webpack": "^4.19.1",
+    "xlsx": "^0.14.0",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
